Fixed scroll layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,10 @@
 	* {
 		@apply border-border;
 	}
+	html {
+		overflow-y: auto;
+		scrollbar-gutter: stable;
+	}
 	body {
 		@apply bg-background text-foreground;
 	}
